--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "shoron",
