--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
-VITE_APP_API_URL=http://localhost:9000
+# VITE_APP_API_URL=http://localhost:9000
+VITE_APP_API_URL=https://chat-app-lr80.onrender.com
+
 VITE_APP_CONVERSATIONS_PER_PAGE=10
 VITE_APP_MESSAGES_PER_PAGE=15
